# ets2-telemetry-udp

./: .gitignore  CMakeLists.txt  ets2-telemetry-udp.cpp  telemetry.hpp
examples/c++/: CMakeLists.txt
examples/c++/include/: TelemetryClient.hpp  telemetry.hpp
examples/c++/src/: TelemetryClient.cpp  main.cpp
examples/python3/: EtsTelemetryClient.py  main.py
include/: debug.hpp  defines.hpp  log.hpp  network.hpp  register.hpp  store.hpp  telemetry.hpp
src/: debug.cpp  ets2-telemetry-udp.cpp  log.cpp  network.cpp  register.cpp  store.cpp
